2010-04-28 Thunor <thunorsif_at_hotmail.com>
* Added fullscreen, xres and yres command line options.
* Added keyboard page up and page down to the load selector.

2010-04-27 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.6.1 released
* Fixed a few issues with the joystick configurator.

2010-04-26 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.6 released
* Added an alternative keyboard based control remapper (F9) for users
  with single buttoned joysticks.

2010-04-25 Thunor <thunorsif_at_hotmail.com>
* The joystick configurator and runtime options are now complete.

2010-04-19 Thunor <thunorsif_at_hotmail.com>
* Fixed a z81 bug in common.c:load_selector() whereby the parent dir
  wasn't always returned by readdir() which would result in the load
  selector not finding any suitable files in a folder and closing
  prematurely, and also becoming stuck in a folder with no way out.
  I experienced this on my Sharp Zaurus.
* Tweaked the selector navigation within runopts and added joystick
  LTrig/RTrig pageup and pagedown control remappings to the load
  selector (I've already added them to runopts).

2010-04-18 Thunor <thunorsif_at_hotmail.com>
* Excluding the configurator, both runtime options pages are now fully
  functional and navigable using the keyboard (cursors and enter),
  mouse or joystick. The control remappings have been significantly
  updated and so any existing rcfile will have to be deleted; later
  I'll check for an old rcfile in code and ignore it.

2010-04-17 Thunor <thunorsif_at_hotmail.com>
* Added a message box manager which is currently used when saving from
  runopts or changing the volume (default -/= or use mouse in runopts).

2010-04-16 Thunor <thunorsif_at_hotmail.com>
* Runtime options now works i.e. the changes are saved or discarded.
  The joystick configurator and selector navigation will be implemented
  later when I'm happy with the layout and scalability looks good.

2010-04-15 Thunor <thunorsif_at_hotmail.com>